# mpc_motion_planner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default.npy  eval_time_to_converge.py  panda_mpc_trajectoy_planning.py  plot_utils.py  requirements.txt  sdf_256x10_mesh.pt  sdf_256x5_mesh.pt  sdf_256x5_mesh_00.pt  sdf_256x5_mesh_01.pt  sdf_256x5_mesh_02.pt  sdf_256x5_mesh_03.pt  sdf_256x5_mesh_torque_00.pt  setup.py
descriptions/robot_descriptions/Kuka_iiwa7_and_14_models/: kuka_iiwa_14.py  kuka_iiwa_7.py
descriptions/robot_descriptions/Kuka_iiwa7_and_14_models/iiwas/objects_description/ft_sensor/urdf/: ft_sensor.urdf.xacro
descriptions/robot_descriptions/franka_panda_bullet/: franka_panda.py  panda_arm.urdf
mpc_solver/: CMakeLists.txt  motionPlanner.cpp  motionPlanner.hpp  robot_ocp.hpp
pyMPC/: howToUse.ipynb  motion_planner.py  mpc_trajectory_planning.py  plot_utils.py  setup.py
pyMPC/descriptions/robot_descriptions/Kuka_iiwa7_and_14_models/iiwas/: model_iiwa7.urdf
pyMPC/descriptions/robot_descriptions/Kuka_iiwa7_and_14_models/iiwas/objects_description/ft_sensor/urdf/: ft_sensor.gazebo.xacro
pyMPC/descriptions/robot_descriptions/franka_panda_bullet/: franka_panda.py
pyMPC/old/: debug.py  eval_solution.ipynb  eval_time_to_converge.py  mpc_trajectory_planning.py  setup.py
report/: mpc_motion_planner_library.docx
robot_utils/: armRobotWrapper.cpp  armRobotWrapper.hpp  kuka14Wrapper.hpp  kuka7Wrapper.hpp  kukaWrapper.cpp  kukaWrapper.hpp  pandaWrapper.cpp  pandaWrapper.hpp
robot_utils/Kuka_iiwa7_and_14_models/iiwas/: model_iiwa14.urdf
robot_utils/Kuka_iiwa7_and_14_models/iiwas/objects_description/grabber/urdf/: grabber.urdf.xacro
